--- a/CourseMate/Views/Post/Details.cshtml
+++ b/CourseMate/Views/Post/Details.cshtml
@@ -7,7 +7,7 @@
 
 <style>
   :root {
-    --bg-primary: #0a0a0a;
+    /* --bg-primary: #0a0a0a; */
     --bg-secondary: rgba(18, 18, 18, 0.5);
     --bg-tertiary: #242424;
     --text-primary: #e4e6eb;
