--- a/CourseMate/Views/Post/MyPosts.cshtml
+++ b/CourseMate/Views/Post/MyPosts.cshtml
@@ -8,8 +8,9 @@
     .main-content {
         background-color: #030303;
         min-height: 100vh;
-        padding: 80px 20px 20px;
-        margin-left: 250px;
+        padding: 30px 20px;
+        margin-left: 130px;
+        width: calc(100% - 130px);
         transition: margin-left 0.3s ease;
     }
 
