--- a/CourseMate/Views/Shared/_Layout.cshtml
+++ b/CourseMate/Views/Shared/_Layout.cshtml
@@ -163,7 +163,7 @@
         .navbar-search-form {
             flex-grow: 1;
             display: flex;
-            justify-content: center; /* centers horizontally */
+            justify-content: center; 
             margin: 0 auto;
         }
 
@@ -196,9 +196,9 @@
             }
 
         .navbar-search-container {
-            position: absolute;
+            /* position: absolute; */
             left: 48%;
-            transform: translateX(-50%);
+            transform: translateX(8%);
             width: 100%;
             display: flex;
             justify-content: center;
