--- a/CourseMate/Views/Shared/_SidebarPartial.cshtml
+++ b/CourseMate/Views/Shared/_SidebarPartial.cshtml
@@ -143,8 +143,8 @@
             </a>
         </li>
         <li>
-            <a href="@Url.Action("SavedQuestions", "Home")" class="@(match("Home", "SavedQuestions") ? "active" : "")">
-                <i class="fas fa-star"></i> <span>Saved Questions</span>
+            <a href="@Url.Action("MySavedPosts", "Post")" class="@(match("Home", "SavedQuestions") ? "active" : "")">
+                <i class="fas fa-star"></i> <span>Saved Posts</span>
             </a>
         </li>
         <li>
